--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,8 +1,14 @@
-<nav class="flex justify-end px-12 py-8">
+---
+import Logo from "./Logo.astro";
+import LinkNav from "./LinkNav.astro";
+---
+
+<nav class="flex justify-between px-12 py-8">
+  <Logo class="w-20" />
   <ul class="flex gap-12">
-    <a href="#" class="font-semibold text- text-white">Home</a>
-    <a href="#" class="font-semibold text- text-white">DNS server</a>
-    <a href="#" class="font-semibold text- text-white">Web server</a>
-    <a href="#" class="font-semibold text- text-white">Project</a>
+    <LinkNav enlace="#" contenido="Home" />
+    <LinkNav enlace="#" contenido="Server DNS" />
+    <LinkNav enlace="#" contenido="Server WEB" />
+    <LinkNav enlace="#" contenido="Project" />
   </ul>
 </nav>
