--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -6,7 +6,7 @@ import LinkNav from "./LinkNav.astro";
 <nav class="flex justify-between px-12 py-8">
   <Logo class="w-20" />
   <ul class="flex gap-12">
-    <LinkNav enlace="#" contenido="Home" />
+    <LinkNav enlace="/server-dns" contenido="Home" />
     <LinkNav enlace="#" contenido="Server DNS" />
     <LinkNav enlace="#" contenido="Server WEB" />
     <LinkNav enlace="#" contenido="Project" />
