Feat: add new page project

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -8,7 +8,7 @@ import LinkNav from "./LinkNav.astro";
   <ul class="flex gap-12">
     <LinkNav enlace="/" contenido="Home" />
     <LinkNav enlace="/server-dns" contenido="Server DNS" />
-    <LinkNav enlace="server-web" contenido="Server WEB" />
-    <LinkNav enlace="#" contenido="Project" />
+    <LinkNav enlace="/server-web" contenido="Server WEB" />
+    <LinkNav enlace="/project" contenido="Project" />
   </ul>
 </nav>
