--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,8 +5,10 @@ import Header from "../components/Header.astro";
 
 <Layout title="Servidores DNS - Web">
   <Header />
-  <main class="grid grid-cols-4 gap-16 px-32 pt-10 py-10">
-    <div class="flex flex-col gap-5 col-start-1 col-end-2 px-6 py-5">
+  <main class="grid lg:grid-cols-4 gap-16 px-20 lg:px-32 pt-10 py-10">
+    <div
+      class="hidden lg:flex lg:flex-col lg:gap-5 lg:col-start-1 lg:col-end-2 px-6 py-5"
+    >
       <div id="contenido" class="flex flex-col gap-4">
         <h3 class="font-semibold text-2xl">Contenido en esta seccion</h3>
         <div class="border-l-4 border-orange-600 px-4 w-52">
@@ -33,8 +35,8 @@ import Header from "../components/Header.astro";
         </div>
       </div>
     </div>
-    <div class="flex flex-col gap-10 col-start-2 col-end-5">
-      <section class="flex flex-col gap-6 w-4/5">
+    <div class="flex flex-col gap-10 w-full lg:col-start-2 lg:col-end-5">
+      <section class="flex flex-col gap-6 w-full lg:w-4/5">
         <h3 class="font-semibold text-4xl">Introduccion</h3>
         <p class="text-lg font-normal text-gray-600">
           En la siguiente documentacion estaremos creando una infraestructura
@@ -50,7 +52,7 @@ import Header from "../components/Header.astro";
           web seguro y la interaccion entre distintos componentes de red.
         </p>
       </section>
-      <section class="flex flex-col gap-6 w-4/5">
+      <section class="flex flex-col gap-6 w-full lg:w-4/5">
         <h3 class="font-semibold text-4xl">Objetivos del proyecto</h3>
         <ul class="flex flex-col gap-4">
           <li class="text-lg font-normal text-gray-600">
@@ -100,14 +102,14 @@ import Header from "../components/Header.astro";
             <img
               src="/images/site.webp"
               alt="arquitectura del proyecto"
-              class="w-2/3"
+              class="lg:w-2/3"
             />
           </picture>
           <picture>
             <img
               src="/images/DNS-WEB.webp"
               alt="arquitectura del proyecto"
-              class="w-2/3"
+              class="lg:w-2/3"
             />
           </picture>
         </div>
