--- a/src/pages/server-dns.astro
+++ b/src/pages/server-dns.astro
@@ -2,12 +2,33 @@
 import Layout from "../layouts/Layout.astro";
 import Header from "../components/Header.astro";
 import SideBar from "../components/SideBar.astro";
+import BlockCode from "../components/BlockCode.astro";
+import ArticleDnsServer from "../components/ArticleDnsServer.astro";
 ---
 
 <Layout title="Servidores DNS - Web">
   <Header />
   <main class="grid lg:grid-cols-4 gap-16 px-20 lg:px-32 pt-10 py-10">
     <SideBar uno="Instacion de Bind9" dos="Configuracion de bind9" />
-    <div class="flex flex-col gap-10 w-full lg:col-start-2 lg:col-end-5"></div>
+    <div class="flex flex-col gap-10 w-full lg:col-start-2 lg:col-end-5">
+      <section class="flex flex-col gap-6 w-full lg:w-4/5">
+        <h2 class="font-semibold text-4xl">Instalacion de Bind</h2>
+        <ArticleDnsServer
+          code="sudo apt update"
+          text="1. Actualizamos el sistema"
+        />
+        <ArticleDnsServer
+          code="sudo apt install bind9"
+          text="2. Instalamos bind"
+        />
+      </section>
+      <section class="flex flex-col gap-6 w-full lg:w-4/5">
+        <h2 class="font-semibold text-4xl">Configuracion de Bind</h2>
+        <ArticleDnsServer
+          code="cd /etc/bind"
+          text="1. Nos movemos a la carpeta de bind."
+        />
+      </section>
+    </div>
   </main>
 </Layout>
