--- a/src/pages/server-web.astro
+++ b/src/pages/server-web.astro
@@ -1,9 +1,65 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Header from "../components/Header.astro";
+import SideBar from "../components/SideBar.astro";
+import ArticleServices from "../components/ArticleServices.astro";
+
+import {
+  INSTALL,
+  CONFIGURATION,
+  CONFIGURATION_WITH_DNS,
+} from "../constantes/Apache";
 ---
 
 <Layout title="Servidores DNS - Web">
   <Header />
-  <main></main>
+  <main class="grid lg:grid-cols-4 gap-16 px-20 lg:px-32 pt-10 py-10">
+    <SideBar uno="Instalacion de apache2" dos="Configuracion de apache2" />
+    <div class="flex flex-col gap-10 w-full lg:col-start-2 lg:col-end-5">
+      <section class="flex flex-col gap-6 w-full lg:w-4/5">
+        <h2 class="font-semibold text-4xl">Instalacion de apache2</h2>
+        {
+          INSTALL.map((paso) => {
+            return (
+              <ArticleServices
+                text={paso.texto}
+                code={paso.code}
+                id={paso.id}
+              />
+            );
+          })
+        }
+      </section>
+      <section class="flex flex-col gap-6 w-full lg:w-4/5">
+        <h2 class="font-semibold text-4xl">Configuracion de apache2</h2>
+        {
+          CONFIGURATION.map((paso) => {
+            return (
+              <ArticleServices
+                text={paso.texto}
+                code={paso.code}
+                id={paso.id}
+              />
+            );
+          })
+        }
+      </section>
+      <section class="flex flex-col gap-6 w-full lg:w-4/5">
+        <h2 class="font-semibold text-4xl">
+          Configuracion del sitio redirijido con DNS
+        </h2>
+        {
+          CONFIGURATION_WITH_DNS.map((paso) => {
+            return (
+              <ArticleServices
+                text={paso.texto}
+                code={paso.code}
+                id={paso.id}
+              />
+            );
+          })
+        }
+      </section>
+    </div>
+  </main>
 </Layout>
