--- a/src/components/BlockCode.astro
+++ b/src/components/BlockCode.astro
@@ -11,7 +11,7 @@ const onClickCode = `navigator.clipboard.writeText(${JSON.stringify(code)})`;
     </code>
   </pre>
   <button
-    class="absolute top-5 right-2 hover:bg-gray-200 text-gray-500 font-bold py-1 px-2 rounded"
+    class="absolute top-5 right-2 bg-gray-200 text-gray-500 font-bold py-1 px-2 rounded"
     onclick={onClickCode}
   >
     Copiar
