--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -9,5 +9,6 @@ import LinkNav from "./LinkNav.astro";
     <LinkNav enlace="/" contenido="Home" />
     <LinkNav enlace="/server-dns" contenido="Server DNS" />
     <LinkNav enlace="/server-web" contenido="Server WEB" />
+    <LinkNav enlace="/server-web" contenido="SSL" />
   </ul>
 </nav>
