--- a/src/pages/server-web.astro
+++ b/src/pages/server-web.astro
@@ -59,7 +59,7 @@ import {
       <section
         class="flex flex-col items-center justify-center lg:items-start lg:justify-start gap-6 w-full lg:w-4/5"
       >
-        <h2 class="font-semibold text-4xl">
+        <h2 class="font-semibold text-4xl text-center lg:text-left">
           Configuracion del sitio redirijido con DNS
         </h2>
         {
