--- a/src/components/IPS.astro
+++ b/src/components/IPS.astro
@@ -2,7 +2,7 @@
 import { ips } from "../constantes/IPS";
 ---
 
-<div class="flex flex-col md:flex-row gap-8">
+<div class="flex flex-col md:flex-row gap-4 lg:gap-8">
   {
     ips.map((server) => {
       return (
