--- a/src/pages/server-dns.astro
+++ b/src/pages/server-dns.astro
@@ -2,19 +2,25 @@
 import Layout from "../layouts/Layout.astro";
 import Header from "../components/Header.astro";
 import SideBar from "../components/SideBar.astro";
-import ArticleDnsServer from "../components/ArticleDnsServer.astro";
 import ArticleServices from "../components/ArticleServices.astro";
 import IPS from "../components/IPS.astro";
+
 import { INSTALL, CONFIGURATIONS } from "../constantes/DNS";
 ---
 
 <Layout title="Servidores DNS - Web">
   <Header />
-  <main class="grid lg:grid-cols-4 gap-16 px-20 lg:px-32 pt-10 py-10">
-    <SideBar uno="Instacion de Bind9" dos="Configuracion de bind9" />
+  <main
+    class="flex flex-col lg:grid lg:grid-cols-4 gap-16 px-4 md:px-10 xl:px-32 pt-10 py-10"
+  >
+    <SideBar uno="Instalacion de apache2" dos="Configuracion de apache2" />
     <div class="flex flex-col gap-10 w-full lg:col-start-2 lg:col-end-5">
-      <section class="flex flex-col gap-6 w-full lg:w-4/5">
-        <h2 class="font-semibold text-4xl">Instalacion de Bind</h2>
+      <section
+        class="flex flex-col items-center justify-center lg:items-start lg:justify-start gap-6 w-full lg:w-4/5"
+      >
+        <h2 class="font-semibold text-4xl text-center lg:text-left">
+          Instalacion de Bind9
+        </h2>
         <IPS />
         {
           INSTALL.map((paso) => {
@@ -28,8 +34,12 @@ import { INSTALL, CONFIGURATIONS } from "../constantes/DNS";
           })
         }
       </section>
-      <section class="flex flex-col gap-6 w-full lg:w-4/5">
-        <h2 class="font-semibold text-4xl">Configuracion de Bind</h2>
+      <section
+        class="flex flex-col items-center justify-center lg:justify-start lg:items-start gap-6 w-full lg:w-4/5"
+      >
+        <h2 class="font-semibold text-4xl text-center lg:text-left">
+          Configuracion de Bind9
+        </h2>
         {
           CONFIGURATIONS.map((paso) => {
             return (
