--- a/src/components/ArticleServices.astro
+++ b/src/components/ArticleServices.astro
@@ -5,5 +5,5 @@ const { code, text, id } = Astro.props;
 
 <article class="flex flex-col gap-2 w-5/6 lg:w-full">
   <p class="text-lg font-normal text-gray-600">{id}. {text}</p>
-  <BlockCode code={code} language="HTML" />
+  <BlockCode code={code} language="bash" />
 </article>
