--- a/src/components/sections/NavBar.astro
+++ b/src/components/sections/NavBar.astro
@@ -1,7 +1,7 @@
 ---
-import Logo from "./Logo.astro";
-import LinkNav from "./LinkNav.astro";
-import Menu from "./Icons/Menu.astro";
+import Logo from "../Icons/Logo.astro";
+import LinkNav from "../LinkNav.astro";
+import Menu from "../Icons/Menu.astro";
 ---
 
 <nav class="flex justify-between px-12 py-8">
