--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Header from "../components/Header.astro";
-import SideBar from "../components/SideBar.astro";
+import Header from "../components/sections/Header.astro";
+import SideBar from "../components/sections/SideBar.astro";
 ---
 
 <Layout title="Servidores DNS - Web">
