--- a/src/pages/server-web.astro
+++ b/src/pages/server-web.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Header from "../components/Header.astro";
-import SideBar from "../components/SideBar.astro";
+import Header from "../components/sections/Header.astro";
+import SideBar from "../components/sections/SideBar.astro";
 import ArticleServices from "../components/ArticleServices.astro";
 import IPS from "../components/IPS.astro";
 
@@ -17,7 +17,11 @@ import {
   <main
     class="flex flex-col lg:grid lg:grid-cols-4 gap-16 px-4 md:px-10 xl:px-32 pt-10 py-10"
   >
-    <SideBar uno="Instalacion de apache2" dos="Configuracion de apache2" />
+    <SideBar
+      uno="Instalacion de apache2"
+      dos="Configuracion de apache2"
+      tres="Configuracion con DNS"
+    />
     <div class="flex flex-col gap-10 w-full lg:col-start-2 lg:col-end-5">
       <section
         class="flex flex-col items-center justify-center lg:items-start lg:justify-start gap-6 w-full lg:w-4/5"
