feat: add new const ssl and optimization in apges and components

--- a/src/pages/server-dns.astro
+++ b/src/pages/server-dns.astro
@@ -13,7 +13,13 @@ import { INSTALL, CONFIGURATIONS } from "../constantes/DNS";
   <main
     class="flex flex-col lg:grid lg:grid-cols-4 gap-16 px-4 md:px-10 xl:px-32 pt-10 py-10"
   >
-    <SideBar uno="Instalacion de apache2" dos="Configuracion de apache2" />
+    <SideBar
+      uno="Instalacion de apache2"
+      dos="Configuracion de apache2"
+      temaUno="Servidor web"
+      temaDos="Configuracion SSL"
+      temaTres="Configurar cliente"
+    />
     <div class="flex flex-col gap-10 w-full lg:col-start-2 lg:col-end-5">
       <section
         class="flex flex-col items-center justify-center lg:items-start lg:justify-start gap-6 w-full lg:w-4/5"
