--- a/src/pages/server-web.astro
+++ b/src/pages/server-web.astro
@@ -21,6 +21,9 @@ import {
       uno="Instalacion de apache2"
       dos="Configuracion de apache2"
       tres="Configuracion con DNS"
+      temaUno="Servidor DNS"
+      temaDos="Configurar cliente"
+      temaTres="Configuracion SSL"
     />
     <div class="flex flex-col gap-10 w-full lg:col-start-2 lg:col-end-5">
       <section
