--- a/src/components/sections/SideBar.astro
+++ b/src/components/sections/SideBar.astro
@@ -1,6 +1,7 @@
 ---
-const { uno, dos, tres, cuatro } = Astro.props;
+const { uno, dos, tres, cuatro, temaUno, temaDos, temaTres } = Astro.props;
 const secciones = [uno, dos, tres, cuatro];
+const temas = [temaUno, temaDos, temaTres];
 ---
 
 <div
@@ -23,27 +24,16 @@ const secciones = [uno, dos, tres, cuatro];
 
   <div id="others-sections" class="flex flex-col gap-4">
     <h3 class="font-semibold text-2xl">Otras secciones de este sitio</h3>
-    <div class="border-l-4 border-orange-600 px-4">
-      <p>Servidor DNS</p>
-    </div>
-    <div class="border-l-4 border-orange-600 px-4">
-      <p>Servidor web</p>
-    </div>
-    <div class="border-l-4 border-orange-600 px-4">
-      <p>Configurar SSL</p>
-    </div>
+    {
+      temas.map((tema) => {
+        return (
+          tema && (
+            <div class="border-l-4 border-orange-600 px-4 w-52">
+              <p>{tema}</p>
+            </div>
+          )
+        );
+      })
+    }
   </div>
 </div>
-
-<!-- <div class="border-l-4 border-orange-600 px-4 w-52">
-  <p>{uno}</p>
-</div>
-<div class="border-l-4 border-orange-600 px-4 w-52">
-  <p>{dos}</p>
-</div>
-<div class="border-l-4 border-orange-600 px-4 w-52">
-  <p>{tres}</p>
-</div>
-<div class="border-l-4 border-orange-600 px-4 w-52">
-  <p>{cuatro}</p>
-</div> -->
