--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,9 @@ import SideBar from "../components/sections/SideBar.astro";
       dos="Objetivos del proyecto"
       tres="Herramientas utilizadas"
       cuatro="Imagenes del proyecto"
+      temaUno="Servidor DNS"
+      temaDos="Servidor web"
+      temaTres="Configuracion SSL"
     />
     <div class="flex flex-col gap-10 w-full lg:col-start-2 lg:col-end-5">
       <section class="flex flex-col gap-6 w-full lg:w-4/5">
