Feat: add content in page ssl

--- a/src/components/sections/SideBar.astro
+++ b/src/components/sections/SideBar.astro
@@ -1,7 +1,8 @@
 ---
-const { uno, dos, tres, cuatro, temaUno, temaDos, temaTres } = Astro.props;
+const { uno, dos, tres, cuatro, temaUno, temaDos, temaTres, temaCuatro } =
+  Astro.props;
 const secciones = [uno, dos, tres, cuatro];
-const temas = [temaUno, temaDos, temaTres];
+const temas = [temaUno, temaDos, temaTres, temaCuatro];
 ---
 
 <div
