--- a/src/components/sections/NavBar.astro
+++ b/src/components/sections/NavBar.astro
@@ -11,7 +11,7 @@ import Menu from "../Icons/Menu.astro";
       <LinkNav enlace="/" contenido="Home" />
       <LinkNav enlace="/server-dns" contenido="Server DNS" />
       <LinkNav enlace="/server-web" contenido="Server WEB" />
-      <!-- <LinkNav enlace="/setting-ssl" contenido="SSL" /> -->
+      <LinkNav enlace="/ssl" contenido="SSL" />
     </ul>
     <Menu class="text-white block sm:hidden font-bold" />
   </div>
