--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,7 @@ import SideBar from "../components/sections/SideBar.astro";
       temaUno="Servidor DNS"
       temaDos="Servidor web"
       temaTres="Configuracion SSL"
+      temaCuatro="Configuracion Cliente"
     />
     <div class="flex flex-col gap-10 w-full lg:col-start-2 lg:col-end-5">
       <section class="flex flex-col gap-6 w-full lg:w-4/5">
