Feat: add response the menu
Se agrego el response al menu

--- a/src/components/LinkNav.astro
+++ b/src/components/LinkNav.astro
@@ -2,6 +2,8 @@
 const { enlace, contenido } = Astro.props;
 ---
 
-<a href={enlace} class="font-semibold text-white hover:text-yellow-400"
+<a
+  href={enlace}
+  class=`link block font-semibold text-white hover:text-yellow-500 `
   >{contenido}</a
 >
