--- a/src/components/sections/NavBar.astro
+++ b/src/components/sections/NavBar.astro
@@ -7,7 +7,7 @@ import Menu from "../Icons/Menu.astro";
 <nav class="flex justify-between px-12 py-8">
   <Logo class="w-20" />
   <ul
-    class="hidden gap-12 sm:flex flex-col sm:flex-row sm:static absolute top-0 right-0 w-1/2 sm:w-3/4 lg:w-96 h-full bg-gray-700 sm:bg-transparent text-white sm:text-black sm:p-0 py-8"
+    class="hidden gap-12 sm:flex flex-col sm:flex-row sm:static absolute top-0 right-0 w-1/2 sm:w-3/4 lg:w-96 h-full bg-gray-700 sm:bg-transparent text-white sm:text-black sm:p-0 py-8 z-50"
     id="nav-menu"
   >
     <Menu
