--- a/src/components/sections/NavBar.astro
+++ b/src/components/sections/NavBar.astro
@@ -7,7 +7,7 @@ import Menu from "../Icons/Menu.astro";
 <nav class="flex justify-between px-12 py-8">
   <Logo class="w-20" />
   <ul
-    class="hidden gap-12 sm:flex flex-col sm:flex-row sm:static absolute top-0 right-0 w-1/2 sm:w-3/4 lg:w-96 h-full bg-gray-700 sm:bg-transparent text-white sm:text-black sm:p-0 py-8 z-50"
+    class="hidden gap-12 sm:flex flex-col sm:flex-row sm:static absolute top-0 right-0 w-1/2 sm:w-5/6 lg:w-96 h-full bg-slate-900 sm:bg-transparent text-white sm:text-black sm:p-0 py-8 z-50"
     id="nav-menu"
   >
     <Menu
@@ -36,6 +36,7 @@ import Menu from "../Icons/Menu.astro";
   document.addEventListener("DOMContentLoaded", () => {
     menuOpen.addEventListener("click", openMenu);
     menuClose.addEventListener("click", closeMenu);
+    window.addEventListener("resize", formatResizeNav);
   });
 
   const openMenu = () => {
@@ -56,5 +57,19 @@ import Menu from "../Icons/Menu.astro";
       link.classList.remove("p-4", "hover:bg-gray-600", "w-full");
     });
     document.body.style.overflow = "auto";
+  };
+
+  const formatResizeNav = () => {
+    if (window.innerWidth >= 640) {
+      navbar.classList.remove("flex", "text-white", "gap-4");
+      navbar.classList.add("hidden");
+      menuOpen.classList.remove("hidden");
+      menuClose.classList.remove("hidden");
+
+      enlace.forEach((link) => {
+        link.classList.remove("p-4", "hover:bg-gray-600", "w-full");
+      });
+      document.body.style.overflow = "auto";
+    }
   };
 </script>
